# ZoZoDe

./: .gitignore  README.md  main.py  pyproject.toml  zozode.spec
.github/workflows/: release.yml
assets/: enemy.json  weapons.json
src/zozode/: ammo.py  assets.py  bullets.py  camera.py  cli.py  client.py  colors.py  combat.py  config.py  constants.py  enemies.py  firewall.py  geometry.py  level.py  magazine.py  movement.py  network.py  player.py  player_state.py  powerups.py  render.py  server.py  udp.py  window.py
tests/: test_ammo.py  test_bullets.py  test_combat.py  test_config.py  test_enemies.py  test_entrypoints.py  test_firewall.py  test_magazine.py  test_movement.py  test_player_state.py  test_powerups.py  test_udp.py
