[project]
name = "zozode"
version = "0.1.0"
description = "A simple pixel game that can be play multiplayer using LAN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.0",
    "cairosvg>=2.7.0",
    "pygame>=2.6.0",
]

[project.scripts]
zozode = "zozode.cli:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
